--- a/all.css
+++ b/all.css
@@ -1,8 +1,22 @@
 body{
-    background-color:aquamarine;
+  
 
 }
 
+h1{
+    margin: 30px 0;
+}
 .container{
-    width:50%;
+    width:50%;  
 }
+
+.container a{ 
+   display: block;
+   width: 100%;
+   height: 100%; 
+   text-decoration: none;
+} 
+
+.container a:hover{ 
+   color:#7d7d7d;
+ }
