--- a/weekOne/css/skills.css
+++ b/weekOne/css/skills.css
@@ -3,15 +3,17 @@
     height: 495px;
     background-color:#415165;
     color:#fff;
-    padding-top: 24px;
     text-align: center;
     box-sizing: initial;
     margin-bottom: 72px;
+    position: relative;
 }
 
 .skills-title{
     font-size: 32px;
     line-height: 45px;
+    font-weight: bolder;
+    margin-top:24px;
     margin-bottom: 8px;
 }
 
@@ -31,17 +33,19 @@
     display: block;
     width: 230px;
     margin:0 auto;
-    font-size: 24px;
-    line-height: 36px;
     border-left:1px solid #ffff;
-    
-    padding-left:24px;
+    font-size: 24px;
+    font-family: Roboto-light;
+    font-weight: 100;
+    line-height: 36px;
 }
 
 .skills-list li{
     display: block;
     margin-bottom: 16px;
     text-align: left;
+    padding-left:24px;
+   
 }
 
 .skills-list li:last-child{
@@ -49,10 +53,13 @@
 }
 
 .background-decoration{
-    width: 100%;
+    width: 300%;
+    left:-100%;
+    top:67px;
     background-color: #96A9C4;
     height: 360px;
     z-index: -999;
     position: absolute;
-    top:1356px;
+   
+
 }
