--- a/weekOne/css/style.css
+++ b/weekOne/css/style.css
@@ -1,7 +1,19 @@
+@import url("education.css");
 @import url("skills.css");
 @import url("experience.css");
 @import url("footer.css");
-
+@font-face{
+    font-family: "Andale Mono,Regular";
+    src: url('ANDALEMO.woff') format('woff');
+}
+@font-face{
+    font-family: "Roboto";
+    src: url('Roboto-Medium.ttf') format('ttf');
+}
+@font-face{
+    font-family: "Roboto-light";
+    src: url('Roboto-Light.ttf') format('ttf');
+}
 *,
 *::before,
 *::after{
@@ -15,7 +27,12 @@ html{
 }
 
 body {
-  
+  font-size: 20px;
+  line-height: 30px;
+  font-weight: 300;
+  font-family: 蘋方-繁,Arial, Helvetica, sans-serif;
+ 
+
 }
 
 .container{
@@ -24,10 +41,8 @@ body {
 }
 
 .banner{
-    background-color:yellow;
     margin-top: 48px;
     margin-bottom: 48px;
-    border-bottom: 1px solid #000000;
     font-size: 80px;
     font-family: 'Regular 80px/90px Andale Mono;';
     letter-spacing: 0px;
@@ -37,9 +52,10 @@ body {
 .banner-text{
     width:280px;
     height: 180px;
-    border:1px solid #7d7d7d;
     margin-bottom: 24px;
     line-height: 90px;
+    font-family: Andale Mono,Regular,Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-weight: 100;
 }
 
 .header{
@@ -56,54 +72,30 @@ body {
     height: 100%;
     position: relative;
     margin-bottom: 72px;
+    font-size: 24px;
+    line-height: 36px;
 }
 
 .list-group-title{
-
     font-size: 32px;
-    line-height: 45px;
+    line-height: 32px;
     font-weight: bolder;
-    /* border:1px solid #7d7d7d   */
 }
 
 .list-group-title span{
     margin-left: 16px;
     font-size: 24px;
     font-weight: bolder;
+    font-family: Roboto,Arial, Helvetica, sans-serif;
     color:#A00404;
 }
 
-.list-group-title + hr{
+.header-hr,.list-group-title + hr{
     border:1px solid #000;
     margin-bottom: 16px;
 }
-
-.profile-title{
-  
-    /* margin-bottom: 8px;
-    font-size: 32px;
-    line-height: 45px;
-    font-weight: bolder;   */
-}
-
-.profile-title span{
-    /* margin-left: 16px;
-    font-size: 24px;
-    font-weight: bolder;
-    color:#A00404; */
-} 
-/* 
-.profile hr,.education hr{
-    border:1px solid #000;
-    margin-bottom: 16px;
-} */
-
-
-
-
-.profile-content{
-
-   
+.header-hr{
+  margin:0;
 }
 
 .profile-content ul,.education ul{
@@ -129,9 +121,6 @@ body {
     
 } 
 
-
-/* .profile-content p{ */
-    /* content:' '; */
 .decoration{  
     position: absolute;
     left:16px;
@@ -143,32 +132,3 @@ body {
     height: 16px;
     
 }
-
-.education-content div{
-    display: table;
-    position: relative;
-    width:50px;
-    border:1px solid #7d7d7d;
-}
-
-.education-content li{
-    margin-bottom: 32px;
-    
-}
-
-.education-content p.decoration:last-of-type{
-    top:68px;
-    
-}
-
-.education-content p.decoration:first-of-type{
-    height: 68px;
-    width: 0px;
-    border-left: 3px solid #96A9c4;
-    position: absolute;
-    top:8px;
-    left:22px;
-    z-index: -1;
-}
-
-
