Revise the length of p in jumbotron

--- a/weekTwo/css/all.css
+++ b/weekTwo/css/all.css
@@ -86,7 +86,7 @@ h1{
     margin-bottom: 32px;
 }
 .jumbotron p{
-    width: 93%; 
+    width: 283px; 
     text-align: justify;    
     margin:0 auto;
     margin-bottom: 48px;
