--- a/weekTwo/css/otherWorks.css
+++ b/weekTwo/css/otherWorks.css
@@ -17,9 +17,12 @@
    margin-bottom: 24px;
 }
 
-.otherWorks p:nth-of-type(2){
-    margin-bottom: 48px;
+.otherWorks>p{
     font-style: italic;
+}
+
+.otherWorks p:nth-of-type(2){
+    margin-bottom: 48px;   
 }
 
 .otherWorks ul{
