--- a/weekOne/css/skills.css
+++ b/weekOne/css/skills.css
@@ -5,6 +5,7 @@
     color:#fff;
     text-align: center;
     box-sizing: initial;
+    padding-top: 24px;
     margin-bottom: 72px;
     position: relative;
 }
@@ -13,7 +14,6 @@
     font-size: 32px;
     line-height: 45px;
     font-weight: bolder;
-    margin-top:24px;
     margin-bottom: 8px;
 }
 
