Revised font weight of skills

--- a/weekOne/css/experience.css
+++ b/weekOne/css/experience.css
@@ -59,7 +59,8 @@
 .experience-list li:last-of-type p:last-of-type{
     font-size: 20px;
     line-height: 30px;
-    font-weight: normal;
+    font-weight:300;
     margin-bottom: 0;
+  
 }
 
