--- a/weekTwo/css/otherWorks.css
+++ b/weekTwo/css/otherWorks.css
@@ -11,6 +11,7 @@
     background-image:url("../img/photo-1561291386-5be50364cfb5.png");
     background-repeat: no-repeat;
     background-position: bottom;
+    background-size:100% 1558px,cover;
 }
 
 .otherWorks h1{
