--- a/source/scss/WeekThree/_variable.scss
+++ b/source/scss/WeekThree/_variable.scss
@@ -3,13 +3,14 @@ $deep-brown:#650300;
 $light-brown:#AA0601;
 $light-pink:#AA06010D;
 $white:#fff;
+$black:#000;
 $border-gray:#DEE2E6;
 $font-r:'Roboto';
 $font-a:'蘋方-繁';
 
 
-$pc-min-media:768px;
-$pad-max-media:767px;
-$pad-min-media:415px;
-$phone-max-media:414px;
+$pc-min-media:769px;
+$pad-max-media:768px;
+$pad-min-media:416px;
+$phone-max-media:415px;
 
