--- a/source/scss/WeekThree/_base.scss
+++ b/source/scss/WeekThree/_base.scss
@@ -14,4 +14,9 @@ body{
     font-family: 'Roboto', '蘋方-繁',serif;
     font-size: 16px;
     line-height: 24px; ;
+
+}
+
+a{
+    text-decoration: none;
 }
