--- a/public/weekThree/index.ejs
+++ b/public/weekThree/index.ejs
@@ -3,29 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
-<link rel="stylesheet" href="../css/WeekThree/main.css">
-<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-
-   
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
+    <link rel="stylesheet" href="../css/WeekThree/main.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <title>第三週版型作業</title>
+  
 </head>
 <body>
-    <header class="header">
-<button class="menu-button" id="menu-button">
-    <span>
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><defs><style>.a{fill:none;}.b{fill:#fff;}</style></defs><path class="a" d="M0,0H24V24H0Z"/><path class="b" d="M3,18H21V16H3Zm0-5H21V11H3ZM3,6V8H21V6Z"/></svg>
-    </span>
-</button>
-<img src="../src/images/week3/logo-new_工作區域 1-1.png" alt="Icon" class="header-icon">
-<ul class="nav">
-    <li><a href="#">系列鏡框</a></li>
-    <li><a href="#">門市據點</a></li>
-    <li><a href="#">部落格</a></li>
-    <li><a href="#">常見問題</a></li>
-</ul>
-</header>
+    <!-- <header class="header">
+        <button class="menu-button" id="menu-button">
+            <span>
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><defs><style>.a{fill:none;}.b{fill:#fff;}</style></defs><path class="a" d="M0,0H24V24H0Z"/><path class="b" d="M3,18H21V16H3Zm0-5H21V11H3ZM3,6V8H21V6Z"/></svg>
+            </span>
+        </button>
+        <img src="../src/images/week3/logo-new_工作區域 1-1.png" alt="Icon" class="header-icon">
+        <ul class="nav">
+            <li><a href="#">系列鏡框</a></li>
+            <li><a href="#">門市據點</a></li>
+            <li><a href="#">部落格</a></li>
+            <li><a href="#">常見問題</a></li>
+        </ul>
+    </header>  -->
+    &lt;header class=&#34;header&#34;&gt;
+&lt;button class=&#34;menu-button&#34; id=&#34;menu-button&#34;&gt;
+    &lt;span&gt;
+        &lt;svg xmlns=&#34;http://www.w3.org/2000/svg&#34; viewBox=&#34;0 0 24 24&#34;&gt;&lt;defs&gt;&lt;style&gt;.a{fill:none;}.b{fill:#fff;}&lt;/style&gt;&lt;/defs&gt;&lt;path class=&#34;a&#34; d=&#34;M0,0H24V24H0Z&#34;/&gt;&lt;path class=&#34;b&#34; d=&#34;M3,18H21V16H3Zm0-5H21V11H3ZM3,6V8H21V6Z&#34;/&gt;&lt;/svg&gt;
+    &lt;/span&gt;
+&lt;/button&gt;
+&lt;img src=&#34;../src/images/week3/logo-new_工作區域 1-1.png&#34; alt=&#34;Icon&#34; class=&#34;header-icon&#34;&gt;
+&lt;ul class=&#34;nav&#34;&gt;
+    &lt;li&gt;&lt;a href=&#34;#&#34;&gt;abcde系列鏡框&lt;/a&gt;&lt;/li&gt;
+    &lt;li&gt;&lt;a href=&#34;#&#34;&gt;門市據點&lt;/a&gt;&lt;/li&gt;
+    &lt;li&gt;&lt;a href=&#34;#&#34;&gt;部落格&lt;/a&gt;&lt;/li&gt;
+    &lt;li&gt;&lt;a href=&#34;#&#34;&gt;常見問題&lt;/a&gt;&lt;/li&gt;
+&lt;/ul&gt;
+&lt;/header&gt;
     <div class="jumbotron-container">
         <div class="jumbotron-img">
             <div>
@@ -196,49 +208,47 @@
             </div>
         </div>
     </div> 
-    
-<div class="footer">
-<div class="footer-content">
-    <div class="links-group">
-        <ul class="nav">
-            <li><a href="">首頁</a></li>
-            <li><a href="">系列鏡框</a></li>
-            <li><a href="">門市據點</a></li>
-            <li><a href="">部落格</a></li>
-            <li><a href="">常見問題</a></li>
-        </ul>
-        <ul class="sns-icons">
-            <li class="facebook"><a href=""><img src="../src/images/week3/ic_social_fb.svg" alt=""></a></li>
-            <li class="instagram"><a href=""><img src="../src/images/week3/ic_social_ig.svg" alt=""></a></li>
-            <li class="line"><a href=""><img src="../src/images/week3/ic_social_line.svg" alt=""></a></li>
-        </ul>
-    </div>
-    <div class="contact-list">
-        <h4 class="phone"><img src="../src/images/week3/ic_phone_48px.svg" alt=""><a href="tel:+">0800-000-000</a></h4>
-        <h4 class="mail"><img src="../src/images/week3/ic_mail_outline_24px.svg" alt=""><a href="mailto:">glasses@business.com</a></h4>    
-    </div>
-</div>
-    <hr class="hr">
-<div class="copy-right">
-    <ul>
-    <li><img src="../src/images/week3/logo-new_工作區域 1-1.png" alt=""></li>
-    <li><p>Copyright © 2020 Glasses.All rights reserved.</p></li>
-    </ul>
-    <ul>
-    <li><a href="">隱私權政策</a></li>
-    <li><a href="">服務條款</a></li>
-    </ul>
-    <script>
-
-        $("#menu-button").on("click",function (e){
-            e.preventDefault();
-            $(".nav").toggleClass('active');
-        })
-        
-    </script>
-</div> 
- 
-
    
+   <!-- <div class="footer">
+        <div class="footer-content">
+            <div class="links-group">
+                <ul class="nav">
+                    <li><a href="">首頁</a></li>
+                    <li><a href="">系列鏡框</a></li>
+                    <li><a href="">門市據點</a></li>
+                    <li><a href="">部落格</a></li>
+                    <li><a href="">常見問題</a></li>
+                </ul>
+                <ul class="sns-icons">
+                    <li class="facebook"><a href=""><img src="../src/images/week3/ic_social_fb.svg" alt=""></a></li>
+                    <li class="instagram"><a href=""><img src="../src/images/week3/ic_social_ig.svg" alt=""></a></li>
+                    <li class="line"><a href=""><img src="../src/images/week3/ic_social_line.svg" alt=""></a></li>
+                </ul>
+            </div>
+            <div class="contact-list">
+                <h4 class="phone"><img src="../src/images/week3/ic_phone_48px.svg" alt=""><a href="tel:+">0800-000-000</a></h4>
+                <h4 class="mail"><img src="../src/images/week3/ic_mail_outline_24px.svg" alt=""><a href="mailto:">glasses@business.com</a></h4>    
+            </div>
+        </div>
+            <hr class="hr">
+        <div class="copy-right">
+            <ul>
+            <li><img src="../src/images/week3/logo-new_工作區域 1-1.png" alt=""></li>
+            <li><p>Copyright © 2020 Glasses.All rights reserved.</p></li>
+            </ul>
+            <ul>
+            <li><a href="">隱私權政策</a></li>
+            <li><a href="">服務條款</a></li>
+            </ul>
+            <script>
+   
+                $("#menu-button").on("click",function (e){
+                    e.preventDefault();
+                    $(".nav").toggleClass('active');
+                })
+                
+            </script>
+        </div> 
+         -->
 </body>
 </html>
