--- a/source/scss/WeekThree/main.scss
+++ b/source/scss/WeekThree/main.scss
@@ -242,6 +242,10 @@
             padding-top: 42px;
             padding-bottom: 80px;
         }
+        @include phone-media-query{
+            padding-top: 32px;
+            margin-bottom: 24px;
+        }
         h1{          
             color:$deep-brown;
             @include setFontStyle($font-a,700);
@@ -262,7 +266,7 @@
             }
             @include phone-media-query{
                 flex-wrap: wrap;  
-                margin-bottom: 56px;
+               
             }
            
             li{
@@ -336,7 +340,7 @@
             }
             @include phone-media-query{
                 li:last-child{
-                    margin-bottom:0;
+                    margin-bottom:56px;
                 }
               
             }
@@ -362,7 +366,7 @@
 
     }
 
-    @include padding-t-rwd(64px,40px,24px);
+    @include padding-t-rwd(64px,40px,0);
     margin:0 auto;
     @include margin-b-rwd(80px,40px,24px);
     h1{
@@ -405,7 +409,6 @@
             }
             div{
                 text-align: center;
-                border: 1px solid #000;
                 position: absolute;
                 width: 100%;
                 height: 100%;
