Set config of gulp-data

--- a/source/template/weekFour/index.html
+++ b/source/template/weekFour/index.html
@@ -1,6 +1,12 @@
 
-{% extends "../../templates/_layout.weekFour.html" %}
+{% extends "../../templates/_layout-w4.html" %}
+
+{% block title %}
+<title>第四週作業</title> 
+{% endblock %}
+
 {% block content %}
+
 <div class="jumbotron-container">
     <div class="jumbotron-img">
         <div>
