--- a/source/template/weekThree/index.html
+++ b/source/template/weekThree/index.html
@@ -1,20 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <%= links %>
-   
-    <title>第三週版型作業</title>
-</head>
-<body>
-    <%= header %>
+{% extends "../../templates/_layout-w4.html" %}
+
+{% block title %}
+<title>第三週作業</title> 
+{% endblock %}
+
+{% block content %}
+
     <div class="jumbotron-container">
         <div class="jumbotron-img">
+          
             <div>
              <h4>Promise-Desert 2020 早春系列</h4>
-            
              <h1>看得清，才能看得遠</h1>
+            
             </div>
         </div>
         <div class="jumbotron-apeal">
@@ -179,7 +177,6 @@
             </div>
         </div>
     </div> 
-    <%= footer %>
-   
-</body>
-</html>
+
+
+    {% endblock %}
