--- a/source/templates/_layout-w4.html
+++ b/source/templates/_layout-w4.html
@@ -8,8 +8,10 @@
 <link rel="stylesheet" href="../css/WeekThree/main.css">
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 
-   
-    <title>第四週作業</title>
+{% block title %}
+{% endblock %}   
+
+    <!-- <title>{{title.week_four}}作業</title> -->
 </head>
 <body>
     <header class="header">
