--- a/source/template/weekThree/index.html
+++ b/source/template/weekThree/index.html
@@ -1,5 +1,12 @@
 {% extends "../../templates/_layout-w4.html" %}
 
+
+{% block css_link %}
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
+<link rel="stylesheet" href="../css/WeekThree/main.css">
+{% endblock %}   
+
+
 {% block title %}
 <title>第三週作業</title> 
 {% endblock %}
@@ -8,10 +15,10 @@
 
     <div class="jumbotron-container">
         <div class="jumbotron-img">
-          
             <div>
              <h4>Promise-Desert 2020 早春系列</h4>
              <h1>看得清，才能看得遠</h1>
+            <h1>{{ title.test}}</h1>
             
             </div>
         </div>
@@ -178,5 +185,16 @@
         </div>
     </div> 
 
-
     {% endblock %}
+
+    {% block javascript_link %}
+    <script>
+
+        $("#menu-button").on("click",function (e){
+            e.preventDefault();
+            $(".nav").toggleClass('active');
+        })
+        
+    </script>
+
+    {% endblock %} 
