--- a/source/templates/_layout-w4.html
+++ b/source/templates/_layout-w4.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
-<link rel="stylesheet" href="../css/WeekThree/main.css">
+{% block css_link %}
+{% endblock %}   
+
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+
 
 {% block title %}
 {% endblock %}   
 
-    <!-- <title>{{title.week_four}}作業</title> -->
 </head>
 <body>
     <header class="header">
@@ -64,14 +65,10 @@
     <li><a href="#">隱私權政策</a></li>
     <li><a href="#">服務條款</a></li>
     </ul>
-    <script>
 
-        $("#menu-button").on("click",function (e){
-            e.preventDefault();
-            $(".nav").toggleClass('active');
-        })
-        
-    </script>
+    {% block javascript_link %}
+    {% endblock %} 
+   
 </div> 
  
 
