--- a/source/scss/ＷeekFive/_variable.scss
+++ b/source/scss/ＷeekFive/_variable.scss
@@ -7,9 +7,10 @@ $deep-green:#2A8356;
 $light-green:#EDF4EE;
 $border-color:#CDDDCD;
 $deep-gray:#0000009A;
+$table-thead-gray:#121212;
 $reply-gray:#00000062;
+$border-red:#E3006E;
 $white:#fff;
-
 
 $pc-min-media:769px;
 $pad-max-media:768px;
@@ -21,3 +22,4 @@ $font-roboto:Roboto;
 
 $layout-height:100vh;
 $image-path:"../../src/images/week5/";
+
