--- a/source/template/weekFive/index.html
+++ b/source/template/weekFive/index.html
@@ -1,5 +1,9 @@
 {% extends "../../templates/_layout-w5.html" %}
         
+{% block title %}
+Assignment
+{% endblock %}
+
 {% block sub_title %}
 All Courses
 <span class="drop-down">
@@ -114,4 +118,9 @@ All Courses
           
       </div>
     </div>
+  {% endblock %}
+
+ 
+  {% block script%}
+
   {% endblock %}
