--- a/source/scss/ＷeekFive/_font.scss
+++ b/source/scss/ＷeekFive/_font.scss
@@ -42,6 +42,36 @@ $formal-light-height:15px;
     
 }
 
+.table-thead{
+    @extend .author-name-big;
+}
+
+.page-link-font{
+    @extend .author-name-big;
+    font-weight: 400;
+}
+
+.access-level-select{
+    @extend .author-name-big;
+    font-weight:400;
+    color:$deep-gray;
+}
+
+.user-id{
+    @extend .page-link-font;
+}
+
+.user-role{
+    @extend .page-link-font;
+}
+
+
+.table-body{
+    @extend .author-name-big;
+    line-height: 19px;
+    font-weight: 500;
+}
+
 .user-name{
     @extend .author-name-big;
     line-height: 24px;
@@ -52,6 +82,28 @@ $formal-light-height:15px;
     @include setFontStyle($font-loto,300);
     color:$deep-gray;
 }
+
+.modal-user-email{
+    @extend .user-mail;
+    font-weight: 400;
+    color:$deep-gray;
+}
+
+.modal-body-title{
+    @include setFontSize(20px,33px);
+    @include setFontStyle($font-loto,500);
+}
+
+.user-status{
+    @extend .modal-user-email;
+    color:$text-black;
+}
+
+.verifity-status{
+    @include setFontSize(16px,19px);
+    @include setFontStyle($font-loto,500);
+}
+
 
 
 .text{
@@ -78,6 +130,21 @@ $formal-light-height:15px;
     color:$reply-gray;
     font-weight: 400;
   
+}
+
+.modal-user-name{
+    @include setFontSize(24px,29px);
+    @include setFontStyle($font-loto,600);
+}
+
+.modal-form-input{
+    @include setFontSize(16px,19px);
+    @include setFontStyle($font-loto,300);
+}
+
+.custom-access-checkbox-label{
+    @extend .author-name-big;
+    font-weight: 400;
 }
 
 
