--- a/source/templates/_layout-w5.html
+++ b/source/templates/_layout-w5.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet" >
     <link rel="stylesheet" href="../css/ＷeekFive/main.css">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" ></script>
-    <title>第五週作業dsds</title>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" ></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+    <title>第五週作業</title>
 </head> 
 <body class="d-flex flex-nowrap">
    <div class="side-nav">
@@ -32,7 +34,7 @@
          </li>
          <li>
           {% include "supervisor_account-24px.svg" %}
-             <a href="">Admin</a></li>
+             <a href="admin.html">Admin</a></li>
          <li>
           {% include "settings-24px.svg" %}
              <a href="">Settings</a></li>
@@ -78,6 +80,10 @@
       </nav>
       {% block content %}
       {% endblock %}
-   
+      {% block modal%}
+
+      {% endblock %}
+      {% block script %}
+      {% endblock %}
 </body>
 </html>
